test/spec_vectors/i32/fail/module_32.wat
(module (func $type-binary-2nd-operand-empty-in-br_if (i32.const 0) (block (br_if 0 (i32.const 0) (i32.add) (i32.const 1)) (drop))))